Fixed: wflow-core - Fixed broken unit test cases. 7.0-SNAPSHOT